# galki_rutube

./: README.md  dockerfile  pyproject.toml
notebooks/: classify.ipynb
src/ml/: classify.py  config.py
src/service/: bot.py  config.py
