[tool.poetry]
name = "galki-rutube"
version = "0.1.0"
description = "The solution for the hackathon Digital Breakthrough 2024 AI season in the case is an intelligent assistant to the support service operator"
authors = ["Ринат Шарафетдинов <sharafetdinov42@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
