[tool.poetry]
name = "galki-rutube"
version = "0.1.0"
description = "The solution for the hackathon Digital Breakthrough 2024 AI season in the case is an intelligent assistant to the support service operator"
authors = ["Ринат Шарафетдинов <sharafetdinov42@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.1"
openpyxl = "^3.1.5"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
transformers = "^4.45.1"
sentence-transformers = "^3.1.1"
pyarrow = "^17.0.0"
nltk = "^3.9.1"
pymorphy2 = "^0.9.1"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"